<resources>
    <string name="app_name">TrainingProject</string>
    <string name="title_activity_main">MainActivity</string>

    <!--Button text-->
    <string name="backButtonText">&lt; BACK</string>
    <string name="nextButtonText">NEXT &gt;</string>

    <string name="hello_blank_fragment_1">Fragment 1</string>
    <string name="hello_blank_fragment_2">Fragment 2</string>
    <string name="hello_blank_fragment_3">Fragment 3</string>

    <!--Default values-->
    <string name="default_number">1</string>
    <string name="default_date">29.03.2019</string>
    <string name="default_temperature">28.6 \u2103</string>
    <string name="temperature_sign">\u2103</string>
</resources>
