<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.Fragment1">

    <TextView
        android:id="@+id/fragmentName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="46sp"
        android:layout_margin="32dp"
        android:text="@string/hello_blank_fragment_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:onClick="onFragment1BackClick"
        android:text="@string/backButtonText"
        android:textSize="32sp"
        app:layout_constraintEnd_toStartOf="@id/buttonNext"
        app:layout_constraintStart_toStartOf="@id/fragmentName"
        app:layout_constraintTop_toBottomOf="@id/fragmentName" />

    <Button
        android:id="@+id/buttonNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nextButtonText"
        android:onClick="onFragment1NextClick"
        android:textSize="32sp"
        android:layout_margin="32dp"
        app:layout_constraintEnd_toEndOf="@id/fragmentName"
        app:layout_constraintTop_toBottomOf="@id/fragmentName"
        app:layout_constraintStart_toEndOf="@id/buttonBack"
        />

</androidx.constraintlayout.widget.ConstraintLayout>